# agent-chat-harness

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  pyproject.toml
backend/_common/: __init__.py
backend/_common/db/: __init__.py  base.py  session.py
backend/_common/env/: __init__.py  settings.py
backend/_common/schemas/: __init__.py  response.py
backend/gateway/: __init__.py  main.py
backend/gateway-microservice/gateway/: __init__.py  main.py
backend/gateway-microservice/gateway/models/: message.py
backend/gateway/models/: __init__.py
backend/gateway/routers/: __init__.py
backend/gateway/schemas/: __init__.py  chat.py
backend/gateway/services/: __init__.py  chat_service.py  orchestrator_client.py
backend/tests/: test_uploads.py
mcp/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
mcp/agent_core/: __init__.py  envelope.py  llm.py  pyproject.toml
mcp/doc_analyzer/: __init__.py  config.py  main.py  pyproject.toml
mcp/doc_analyzer/db/: __init__.py
mcp/doc_analyzer/prompts/: __init__.py  analyze.py
mcp/doc_analyzer/schemas/: __init__.py  document.py  http.py
mcp/doc_analyzer/tools/: __init__.py  doc_tools.py  providers.py
mcp/image_analyzer/: __init__.py  config.py  main.py  pyproject.toml
mcp/image_analyzer/db/: __init__.py
mcp/image_analyzer/prompts/: __init__.py  vision.py
mcp/image_analyzer/schemas/: __init__.py  http.py  image.py
mcp/image_analyzer/tools/: __init__.py  image_tools.py  providers.py
mcp/master_orchestrator/: __init__.py  config.py  main.py  pyproject.toml
mcp/master_orchestrator/db/: __init__.py
mcp/master_orchestrator/prompts/: orchestrate.py
mcp/master_orchestrator/schemas/: http.py  plan.py
mcp/master_orchestrator/tests/: test_memory.py
mcp/master_orchestrator/tools/: graph.py  orchestrate_tools.py  planner.py  subagent_client.py
mcp/scripts/: gemma_healthcheck.py
mcp/web_agent/: __init__.py  config.py  main.py  pyproject.toml
mcp/web_agent/db/: __init__.py
mcp/web_agent/prompts/: generate.py  summarize.py
mcp/web_agent/schemas/: http.py  web.py
mcp/web_agent/tools/: providers.py  web_tools.py
(+227 files in other folders)
