[project]
name = "agent-chat-backend"
version = "0.1.0"
description = "agent-chat backend: API Gateway + shared _common, FastAPI/Pydantic microservices"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.30.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.20.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
gateway = "gateway.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["_common", "gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
